hellow2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellow-deployment-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hellow-deployment-2
  template:
    metadata:
      labels:
        app: hellow-deployment-2
    spec:
      containers:
      - name: hellow-2
        image: "gcr.io/google-samples/hello-app:2.0"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hellow-service-2
spec:
  selector:
    app: hellow-deployment-2
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001
